2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (main): Move global var 'mulestr' to local scope.
	Make it just bool 'muleMode', as all its function is just that.

2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (InitWordSegmentation, main):
	Make the global var 'method' local and passed as argument.

2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h (AbsWordSeg::~AbsWordSeg): Declare d-tor as virtual,
	fixing memory leak because its derived class d-tor was not called.
	Thanks valgrind.

	* src/wordseg.cpp (InitWordSegmentation, main): Move 'delete method' to
	main(), where it's more obvious.

	* src/wordseg.cpp (ExitWordSegmentation, WordSegmentation, main):
	Make ExitWordSegmentation() and WordSegmentation() accept mere
	AbsWordSeg pointer, rather than pointer to pointer, reducing
	dereferencing steps.

2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix valgrind warnings about mismatched new/delete.

	* src/abswordseg.cpp (AbsWordSeg::~AbsWordSeg):
	* src/maxwordseg.cpp (MaxWordSeg::MaxWordSeg, MaxWordSeg::~MaxWordSeg):
	* src/wordseg.cpp (InitWordSegmentation, main):
	Replace 'delete' with 'delete[]' where data was created with new[].

2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* AUTHORS: Update info, as the trie supporting code has been removed.
	Now my role is general maintenance. And describe Phaisarn's role as
	the original creator.

2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::AbsWordSeg):
	Replace C malloc() calls with C++ 'new' operator, to better match with
	the 'delete' operator in destructor.

2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h (AbsWordSeg::Has_Karun):
	Declare another utility function as static member.
	* src/abswordseg.cpp (AbsWordSeg::Has_Karun):
	Replace negative number literal with hexadecimal code, for readability.
